@@ -93,6 +93,16 @@ should handle itself the connection instead of B<nnrpd>.
 
 =head1 Changes in 2.5.2
 
+The way checkpoints are handled by B<innreport> for B<innd> and B<innfeed>
+has totally changed, so as to provide more accurate daily statistics.
+The first Usenet report after an upgrade to S<INN 2.5.2> will probably
+contain untrustful statistics for incoming and outgoing articles (because
+the beginning of the log files that will be used was generated by a previous
+version of INN).
+
+Note that a new version of F<innreport.conf> is shipped with S<INN 2.5.2>.
+Changes are minor and not mandatory for the upgrade.
+
 =over 2
 
 =item *
